# fluffy-injector

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  resource.rc
.github/workflows/: rust.yml
src/: app.rs  main.rs  models.rs  ui.rs
src/core/: dll_selector.rs  icon_loader.rs  injector.rs  mod.rs  process_scanner.rs  window_placement.rs
src/models/: config.rs  dll_manager.rs  mod.rs  process.rs  toast.rs
src/modules/: app.rs  config.rs  dll.rs  icon.rs  injector.rs  mod.rs  process.rs
src/ui/: dll_panel.rs  process_panel.rs
