[package]
name = "fluffy_injector"
version = "0.2.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = "0.27"
egui_extras = "0.27"
rfd = "0.14"
sysinfo = "0.33.1"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Security"
] }
image = "0.24"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[build-dependencies]
winres = "0.1.12"