[package]
name = "fluffy_injector"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "fluffy_injector"
path = "src/main.rs"
test = false
bench = false

[dependencies]
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence"] }
rfd = { version = "0.17", default-features = false }
raw-window-handle = "0.6"
wraith-rs = { version = "0.1.8", default-features = false, features = ["std", "remote"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_Security"
] }
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
ron = "0.12"

[build-dependencies]
winresource = { version = "0.1.31", default-features = false }
